// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveStory.tsx renders correctly ActiveStory 1`] = `
<div
  className="activeStory"
>
  <div
    className="pageTitle"
  >
    Active Story
  </div>
  <div
    className="storyPoint"
  >
    <div
      className="storyName"
    />
    <div
      className="storyPointList"
    >
      <ul
        className="row"
      >
        <ul
          className="row"
        >
          <FibonacciBox
            fibonacciNumber={1}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={2}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={3}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={5}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={8}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={13}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={21}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={34}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={55}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={89}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={134}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={0}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
        </ul>
      </ul>
    </div>
    <div
      className="voteNumber"
    >
      Please Vote!
    </div>
  </div>
</div>
`;

exports[`ActiveStory.tsx renders correctly while activeUserStory 1`] = `
<div
  className="activeStory"
>
  <div
    className="pageTitle"
  >
    Active Story
  </div>
  <div
    className="storyPoint"
  >
    <div
      className="storyName"
    >
      storyName
    </div>
    <div
      className="storyPointList"
    >
      <ul
        className="row"
      >
        <ul
          className="row"
        >
          <FibonacciBox
            fibonacciNumber={1}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={2}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={3}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={5}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={8}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={13}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={21}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={34}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={55}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={89}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={134}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
          <FibonacciBox
            fibonacciNumber={0}
            giveStoryPoint={[Function]}
            storyPoint={-1}
          />
        </ul>
      </ul>
    </div>
    <div
      className="voteNumber"
    >
      Please Vote!
    </div>
  </div>
</div>
`;

exports[`ActiveStory.tsx renders correctly while this.getMyStoryPoint return 1 1`] = `
<div
  className="activeStory"
>
  <div
    className="pageTitle"
  >
    Active Story
  </div>
  <div
    className="storyPoint"
  >
    <div
      className="storyName"
    />
    <div
      className="storyPointList"
    >
      <ul
        className="row"
      >
        <ul
          className="row"
        >
          <FibonacciBox
            fibonacciNumber={1}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={2}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={3}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={5}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={8}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={13}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={21}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={34}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={55}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={89}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={134}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
          <FibonacciBox
            fibonacciNumber={0}
            giveStoryPoint={[Function]}
            storyPoint={1}
          />
        </ul>
      </ul>
    </div>
    <div
      className="voteNumber"
    >
      1 Voted
    </div>
  </div>
</div>
`;

exports[`ActiveStory.tsx renders correctly while this.getMyStoryPoint return undefined 1`] = `
<div
  className="activeStory"
>
  <div
    className="pageTitle"
  >
    Active Story
  </div>
  <div
    className="storyPoint"
  >
    <div
      className="storyName"
    />
    <div
      className="storyPointList"
    >
      <ul
        className="row"
      >
        <ul
          className="row"
        >
          <FibonacciBox
            fibonacciNumber={1}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={2}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={3}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={5}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={8}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={13}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={21}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={34}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={55}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={89}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={134}
            giveStoryPoint={[Function]}
          />
          <FibonacciBox
            fibonacciNumber={0}
            giveStoryPoint={[Function]}
          />
        </ul>
      </ul>
    </div>
    <div
      className="voteNumber"
    >
      ? Voted
    </div>
  </div>
</div>
`;
